[gd_scene load_steps=13 format=3 uid="uid://boyfta68ioo4v"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_60qb5"]
[ext_resource type="Texture2D" uid="uid://d2egbq3283kmx" path="res://assets/sprites/slime_purple.png" id="2_upbcr"]
[ext_resource type="PackedScene" uid="uid://c43oimwkw1448" path="res://scenes/killzone.tscn" id="2_wxbvw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0yb4c"]
atlas = ExtResource("2_upbcr")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn684"]
atlas = ExtResource("2_upbcr")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceufr"]
atlas = ExtResource("2_upbcr")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywmpr"]
atlas = ExtResource("2_upbcr")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_641or"]
atlas = ExtResource("2_upbcr")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0vpi"]
atlas = ExtResource("2_upbcr")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_o325p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yb4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn684")
}],
"loop": true,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceufr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywmpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_641or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0vpi")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ss7yp"]
size = Vector2(16, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q07cf"]
size = Vector2(8, 10.75)

[node name="slime" type="Node2D"]
script = ExtResource("1_60qb5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_o325p")
animation = &"die"
autoplay = "idle"
frame_progress = 0.634913

[node name="Killzone" parent="." instance=ExtResource("2_wxbvw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_ss7yp")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(9, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-9, 0)

[node name="Head" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShapeDie" type="CollisionShape2D" parent="Head"]
position = Vector2(-1, -8.375)
shape = SubResource("RectangleShape2D_q07cf")

[node name="Timer" type="Timer" parent="Head"]
wait_time = 0.5

[connection signal="body_entered" from="Head" to="." method="_on_head_body_entered"]
[connection signal="timeout" from="Head/Timer" to="." method="_on_timer_timeout"]
